[gd_scene load_steps=4 format=3 uid="uid://dkhjvm57vso4"]

[ext_resource type="Script" uid="uid://2wtwfm44h0wa" path="res://stages/push_button/push_button.gd" id="1_argsi"]
[ext_resource type="PackedScene" uid="uid://dch063htskbhx" path="res://ui/hud/juicy_bar/juicy_bar.tscn" id="1_t3mk6"]
[ext_resource type="FontFile" uid="uid://c6wydwtikx8v6" path="res://assets/fonts/Round9x13.ttf" id="3_ro27u"]

[node name="PushButton" type="Node2D"]
script = ExtResource("1_argsi")

[node name="JuicyBar" parent="." instance=ExtResource("1_t3mk6")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 460.0
offset_top = 180.0
offset_right = 460.0
offset_bottom = 180.0
size_flags_horizontal = 4
size_flags_vertical = 4
current_value = 1.0

[node name="RefreshButton" type="Button" parent="."]
offset_left = 549.0
offset_top = 296.0
offset_right = 749.0
offset_bottom = 356.0
theme_override_fonts/font = ExtResource("3_ro27u")
theme_override_font_sizes/font_size = 30
text = "REFRESH"

[node name="DecreaseTimer" type="Timer" parent="."]
autostart = true
